<resources>
    <string name="app_name">Aluno UESB</string>

    <string name="lbl_horarios">Horários</string>
    <string name="lbl_lembretes">Lembretes</string>
    <string name="lbl_disciplinas">Disciplinas</string>
    <string name="lbl_calcular_media">Calcular Média</string>
    <string name="lbl_semestre">Meu Semestre</string>
    <string name="menu_salvar">Salvar</string>
    <string name="menu_cancelar">Cancelar</string>
    <string name="menu_editar">Editar</string>
    <string name="selecione_o_dia_e_um_hor_rio">Selecione o dia e um horário</string>
    <string name="dia_da_semana">Dia da Semana</string>
    <string name="cancelar">Cancelar</string>
    <string name="salvar">Salvar</string>
    <string name="hor_rio">Horário</string>
    <string name="dia_e_horario">Selecione o dia e o horário</string>
    <integer name="radio_button_border">10</integer>

    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="recuperar_a_senha">Recuperar a senha</string>
    <string name="logar">Logar</string>
    <string name="recuperar_senha">Recuperar senha</string>
    <string name="enviar">Enviar</string>
    <string name="email">Email</string>
    <string name="nome">Nome</string>
    <string name="nome_completo">Nome e sobrenome</string>
    <string name="telefone">Telefone</string>
    <string name="repita_a_senha">Repita a senha</string>
    <string name="recuperar_conta">Recuperar conta</string>
    <string name="criando_conta">Criando conta</string>
    <string name="voltar">Voltar</string>
    <string name="ou">--------------------- OU ---------------------</string>
    <string name="logar_com_google">Logar com Google</string>
    <string name="logar_com_facebook">Logar com Facebook</string>
    <string name="criar_conta">Criar conta</string>
    <string name="confirmar">Confirmar</string>
    <string name="xxxx">XXXX</string>
    <string name="termos_de_uso">Termos de uso</string>
    <string name="texto_termos_de_uso">Texto termos de uso</string>
    <string name="politica_de_privacidade">Política de privacidade</string>
    <string name="texto_politica_de_privacidade">Texto da política de privacidade</string>
    <string name="politica_de_dados">Política de dados</string>
    <string name="texto_politica_de_dados">Texto da política de dados</string>
    <string name="avancar">Avançar</string>
    <string name="dados_login_incorretos">Dados de login incorretos</string>
    <string name="email_invalido">Email inválido</string>
    <string name="senha_curta">Senha muito curta</string>
    <string name="conta_criada_com_sucesso">Conta cadastrada com sucesso!</string>
    <string name="continuando">Continuando</string>
    <string name="rg">RG</string>
    <string name="cpf">CPF</string>
    <string name="cnh">CNH</string>
    <string name="ativo">Ativo</string>
    <string name="reenviar_email">Reenviar email</string>
    <string name="criando_sua_conta">Criando sua conta...</string>
    <string name="sera_enviado_um_email_para_recuperar_a_sua_senha_verifique_sua_caixa_de_entrada_e_spam">Será enviado um email para recuperar a sua senha, verifique sua caixa de entrada e spam.</string>
    <string name="email_enviado_com_sucesso">Email enviado com sucesso!</string>
    <string name="verifique_sua_caixa_de_entrada_e_spam">Verifique sua caixa de entrada e spam</string>
    <string name="user_email_com">user@email.com</string>
    <string name="escolha_seu_curso">Escolha seu curso</string>
    <string name="qual_numero_matricula">Qual o seu número de matrícula?</string>
    <string name="qual_seu_semestre">Qual o semestre atual?</string>
    <string name="add_suas_disciplinas">Adicione suas disciplinas</string>
    <string name="disciplina">Disciplina</string>

</resources>
