<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.ForgotPasswordActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/backgroud_card"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:layout_marginBottom="@dimen/margin_card"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/margin_card"
                android:layout_marginRight="@dimen/margin_card"
                android:layout_marginBottom="@dimen/margin_card"
                android:gravity="top|center"
                android:background="@drawable/shape_round">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="@dimen/title_card"
                    android:layout_marginTop="16dp"
                    android:text="@string/recuperar_senha"/>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="127dp"
                        android:layout_height="107dp"
                        android:visibility="visible"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:src="@drawable/email" />

                    <ProgressBar
                        android:id="@+id/progress_circular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="invisible"
                        android:layout_gravity="center"/>

                </FrameLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/margin_card"
                    android:layout_marginRight="@dimen/margin_card"
                    android:text="@string/email_enviado_com_sucesso"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/margin_card"
                    android:layout_marginRight="@dimen/margin_card"
                    android:text="@string/verifique_sua_caixa_de_entrada_e_spam"/>

                <TextView
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_card"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textColor="@color/btn_text_link"
                    android:layout_marginLeft="@dimen/margin_card"
                    android:layout_marginRight="@dimen/margin_card"
                    android:text= "@string/user_email_com"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/margin_card"
                    android:layout_marginLeft="@dimen/margin_card"
                    android:layout_marginRight="@dimen/margin_card"
                    android:textColor="@color/btn_text_color"
                    android:background="@drawable/btn_round"
                    android:onClick="onBackActivity"
                    android:text="@string/voltar"/>

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</ScrollView>