<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.ForgotPasswordActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/backgroud_card"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:layout_marginBottom="@dimen/margin_card"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/margin_card"
                android:layout_marginRight="@dimen/margin_card"
                android:layout_marginBottom="@dimen/margin_card"
                android:gravity="top|center"
                android:background="@drawable/shape_round">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="@dimen/title_card"
                    android:layout_marginTop="16dp"
                    android:text="@string/recuperar_senha"/>

                <EditText
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:layout_marginTop="@dimen/margin_card"
                    android:layout_marginLeft="@dimen/margin_card"
                    android:layout_marginRight="@dimen/margin_card"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="@dimen/margin_card"
                    android:layout_marginRight="@dimen/margin_card"
                    android:text="@string/sera_enviado_um_email_para_recuperar_a_sua_senha_verifique_sua_caixa_de_entrada_e_spam"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_card">

                    <Button
                        android:id="@+id/btnSend"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/margin_card"
                        android:layout_marginRight="@dimen/margin_card"
                        android:textColor="@color/btn_text_color"
                        android:background="@drawable/btn_round"
                        android:onClick="send"
                        android:visibility="visible"
                        android:text="@string/enviar"/>

                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"/>

                </FrameLayout>

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</ScrollView>